syntax = "proto3";

option csharp_namespace = "NotificationService.Grpc";

package NotificationServiceGrpc;

import "Grpc/Protos/NotificationSettings/Contracts/Dto/MessageDto.proto";
import "Grpc/Protos/Shared/GuidGrpc.proto";

message PushNotificationRequest 
{
  MessageDto Message = 1;
  repeated GuidGrpc UserIds = 2;
  repeated GuidGrpc RoleIds = 3;
}

