syntax = "proto3";

option csharp_namespace = "NotificationService.Grpc";

package NotificationServiceGrpc;

import "Grpc/Protos/NotificationSettings/Contracts/PushNotificationRequest.proto";
import "Grpc/Protos/NotificationSettings/Contracts/AddNotificationSettingsRequest.proto";
import "Grpc/Protos/Shared/GuidGrpc.proto";

service NotificationService {
  rpc Add (AddNotificationSettingsRequest) returns (GuidGrpc);
  rpc Push (PushNotificationRequest) returns (GuidGrpc);
}

