syntax = "proto3";

option csharp_namespace = "NotificationService.Grpc";

package NotificationServiceGrpc;

message GuidGrpc
{
  string Guid = 1;
}